--- a/DotNetKit.Wpf.AutoCompleteComboBox/Windows/Controls/AutoCompleteComboBox.xaml
+++ b/DotNetKit.Wpf.AutoCompleteComboBox/Windows/Controls/AutoCompleteComboBox.xaml
@@ -10,4 +10,5 @@
     d:DesignHeight="300"
     IsEditable="True"
     IsTextSearchEnabled="False"
+    PreviewKeyDown="ComboBox_PreviewKeyDown"
     />
