--- a/DotNetKit.Wpf.AutoCompleteComboBox.Demo/MainWindow.xaml
+++ b/DotNetKit.Wpf.AutoCompleteComboBox.Demo/MainWindow.xaml
@@ -11,19 +11,6 @@
     Width="525"
     Height="350"
     >
-    <Window.Resources>
-        <ResourceDictionary>
-            <DataTemplate DataType="{x:Type local:Person}">
-                <StackPanel>
-                    <TextBlock Text="{Binding Name}" FontWeight="Bold" />
-                    <TextBlock>
-                        Some descriptions. Id = <Run Text="{Binding Id, Mode=OneTime}" />.
-                    </TextBlock>
-                </StackPanel>
-            </DataTemplate>
-        </ResourceDictionary>
-    </Window.Resources>
-
     <StackPanel>
         <GroupBox Header="Status">
             <Grid>
@@ -51,6 +38,17 @@
             ItemsSource="{Binding Items}"
             SelectedItem="{Binding SelectedItem}"
             SelectedValue="{Binding SelectedValue}"
-            />
+            >
+            <dotNetKitControls:AutoCompleteComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <TextBlock Text="{Binding Name}" FontWeight="Bold" />
+                        <TextBlock>
+                            Some descriptions. Id = <Run Text="{Binding Id, Mode=OneTime}" />.
+                        </TextBlock>
+                    </StackPanel>
+                </DataTemplate>
+            </dotNetKitControls:AutoCompleteComboBox.ItemTemplate>
+        </dotNetKitControls:AutoCompleteComboBox>
     </StackPanel>
 </Window>
