--- a/DotNetKit.Wpf.AutoCompleteComboBox.Demo/MainWindow.xaml
+++ b/DotNetKit.Wpf.AutoCompleteComboBox.Demo/MainWindow.xaml
@@ -11,6 +11,19 @@
     Width="525"
     Height="350"
     >
+    <Window.Resources>
+        <ResourceDictionary>
+            <DataTemplate DataType="{x:Type local:Person}">
+                <StackPanel>
+                    <TextBlock Text="{Binding Name}" FontWeight="Bold" />
+                    <TextBlock>
+                        Some descriptions. Id = <Run Text="{Binding Id, Mode=OneTime}" />.
+                    </TextBlock>
+                </StackPanel>
+            </DataTemplate>
+        </ResourceDictionary>
+    </Window.Resources>
+
     <StackPanel>
         <GroupBox Header="Status">
             <Grid>
@@ -26,15 +39,18 @@
 
                 <TextBlock Text="SelectedItem: " />
                 <TextBlock Grid.Column="1" Text="{Binding SelectedItem}" />
+
+                <TextBlock Grid.Row="1" Text="SelectedValue: " />
+                <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding SelectedValue}" />
             </Grid>
         </GroupBox>
 
         <dotNetKitControls:AutoCompleteComboBox
-            DisplayMemberPath="Name"
+            SelectedValuePath="Id"
             TextSearch.TextPath="Name"
             ItemsSource="{Binding Items}"
             SelectedItem="{Binding SelectedItem}"
-            SelectionChanged="AutoCompleteComboBox_SelectionChanged"
+            SelectedValue="{Binding SelectedValue}"
             />
     </StackPanel>
 </Window>
