--- a/DotNetKit.Wpf.AutoCompleteComboBox.Demo/MainWindow.xaml
+++ b/DotNetKit.Wpf.AutoCompleteComboBox.Demo/MainWindow.xaml
@@ -50,20 +50,10 @@
         <dotNetKitControls:AutoCompleteComboBox
             SelectedValuePath="Id"
             TextSearch.TextPath="Name"
+            DisplayMemberPath="Display"
             ItemsSource="{Binding Items}"
             SelectedItem="{Binding SelectedItem}"
             SelectedValue="{Binding SelectedValue}"
-            >
-            <dotNetKitControls:AutoCompleteComboBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel>
-                        <TextBlock Text="{Binding Name}" FontWeight="Bold" />
-                        <TextBlock>
-                            Some descriptions. Id = <Run Text="{Binding Id, Mode=OneTime}" />.
-                        </TextBlock>
-                    </StackPanel>
-                </DataTemplate>
-            </dotNetKitControls:AutoCompleteComboBox.ItemTemplate>
-        </dotNetKitControls:AutoCompleteComboBox>
+            />
     </StackPanel>
 </Window>
