--- a/Demo/App.xaml
+++ b/Demo/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application
-    x:Class="Test.App"
+    x:Class="Demo.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    StartupUri="MainWindow.xaml"/>
-
+    StartupUri="MainWindow.xaml"
+    />
