--- a/Demo/MainWindow.xaml
+++ b/Demo/MainWindow.xaml
@@ -1,13 +1,13 @@
 ﻿<Window
-    x:Class="DotNetKit.Demo.MainWindow"
+    x:Class="Demo.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:dotNetKitControls="clr-namespace:DotNetKit.Windows.Controls;assembly=DotNetKit.Wpf.AutoCompleteComboBox"
-    xmlns:local="clr-namespace:DotNetKit.Demo.Data"
+    xmlns:local="clr-namespace:Demo.Data"
     mc:Ignorable="d"
-    Title="DotNetKit.Wpf.AutoCompleteComboBox Demo"
+    Title="Demo"
     Width="525"
     Height="350"
     >
