--- a/Tests/App.xaml
+++ b/Tests/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application
-    x:Class="DotNetKit.Demo.App"
+    x:Class="Tests.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    StartupUri="MainWindow.xaml"
-    />
+    StartupUri="MainWindow.xaml"/>
+
