--- a/Tests/MainWindow.xaml
+++ b/Tests/MainWindow.xaml
@@ -1,14 +1,14 @@
 <Window
-    x:Class="Test.MainWindow"
+    x:Class="Tests.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:dotNetKitControls="clr-namespace:DotNetKit.Windows.Controls;assembly=DotNetKit.Wpf.AutoCompleteComboBox"
-    xmlns:test="clr-namespace:Test"
+    xmlns:tests="clr-namespace:Tests"
     mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance test:MainViewModel}"
-    Title="Test"
+    d:DataContext="{d:DesignInstance tests:MainViewModel}"
+    Title="Tests"
     Width="800" Height="450" FontSize="16">
     <Window.Resources>
         <ResourceDictionary>
