--- a/Tests/Cases/CollectionViewCase.xaml
+++ b/Tests/Cases/CollectionViewCase.xaml
@@ -1,34 +1,22 @@
-﻿<UserControl x:Class="Tests.Cases.BasicCase"
+﻿<UserControl x:Class="Tests.Cases.CollectionViewCase"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:dotNetKitControls="clr-namespace:DotNetKit.Windows.Controls;assembly=DotNetKit.Wpf.AutoCompleteComboBox"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:dotNetKitControls="clr-namespace:DotNetKit.Windows.Controls;assembly=DotNetKit.Wpf.AutoCompleteComboBox" 
              xmlns:local="clr-namespace:Tests.Cases"
-             mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance local:BasicCaseViewModel}">
-    <GroupBox Header="BasicCase">
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800"
+             d:DataContext="{d:DesignInstance local:CollectionViewCaseViewModel}">
+    <GroupBox Header="CollectionViewCase">
         <StackPanel>
-            <TextBlock>
-                <Run Text="Text:" FontWeight="Bold" />
-                <Run Text="{Binding Text, Mode=OneWay}" />
-                <Run Text="Selected:" FontWeight="Bold" />
-                <Run Text="{Binding SelectedValue, Mode=OneWay}" />
-                <Run Text="{Binding SelectedItem.Name, Mode=OneWay}" />
-                <Run Text="Items" FontWeight="Bold" />
-                <Run Text="{Binding Items.Count, Mode=OneWay, ElementName=autoCompleteComboBox}" />
-            </TextBlock>
-
             <StackPanel Orientation="Horizontal" Margin="0,10">
                 <dotNetKitControls:AutoCompleteComboBox
-                    x:Name="autoCompleteComboBox"
                     SelectedValuePath="Id"
                     TextSearch.TextPath="Name"
-                    Text="{Binding Text}"
-                    ItemsSource="{Binding Items}"
+                    ItemsSource="{Binding CollectionView}"
                     SelectedItem="{Binding SelectedItem}"
                     SelectedValue="{Binding SelectedValue}"
-                    HorizontalAlignment="Left" Width="240">
+                    HorizontalAlignment="Left" Width="200">
                     <dotNetKitControls:AutoCompleteComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel>
@@ -38,6 +26,9 @@
                         </DataTemplate>
                     </dotNetKitControls:AutoCompleteComboBox.ItemTemplate>
                 </dotNetKitControls:AutoCompleteComboBox>
+
+                <TextBlock Margin="10,0,5,0">Filter:</TextBlock>
+                <TextBox Text="{Binding Filter, UpdateSourceTrigger=PropertyChanged}" Width="80" />
 
                 <Button Command="{Binding ReloadCommand}" Width="80" Margin="10,0,0,0">
                     Reload
