--- a/Tests/MainWindow.xaml
+++ b/Tests/MainWindow.xaml
@@ -14,6 +14,8 @@
         <StackPanel Margin="16">
             <cases:BasicCase />
             <Separator />
+            <cases:CollectionViewCase />
+            <Separator />
             <cases:CollectionViewSourceCase />
             <Separator />
             <cases:DataGridCase />
